GNOME Bugzilla – Bug 781185
tooltip text adds ellipsis unconditionally when some note is present
Last modified: 2017-04-13 00:06:57 UTC
The new cool tooltip feature (bug 774952) seems to unconditionally add ellipsis to tooltip text when some notes is present. How to reproduce: 1. Create some new event. Add some small note to the event (eg: "test"). 2. Save the event. 3. Hover over the event. Result: Along with other details, the notes is shown as "test...". Ellipsis isn't required as "test" is the only text in the note. Thanks
Created attachment 349754 [details] [review] event-widget: correctly ellipsize descripton tooltip
Thanks for the report! Attachment 349754 [details] pushed as 6623731 - event-widget: correctly ellipsize descripton tooltip