event-widget: correctly ellipsize descripton tooltip

https://bugzilla.gnome.org/show_bug.cgi?id=781185